[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/Mob.gd" type="Script" id=1]
[ext_resource path="res://assets/art/enemyFlyingAlt_1.png" type="Texture" id=2]
[ext_resource path="res://assets/art/enemyFlyingAlt_2.png" type="Texture" id=3]
[ext_resource path="res://assets/art/enemyWalking_1.png" type="Texture" id=4]
[ext_resource path="res://assets/art/enemyWalking_2.png" type="Texture" id=5]
[ext_resource path="res://assets/art/enemySwimming_1.png" type="Texture" id=6]
[ext_resource path="res://assets/art/enemySwimming_2.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "swim",
"speed": 4.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 35.2706
height = 23.3281

[node name="Mob" type="RigidBody2D" groups=["mobs"]]
collision_layer = 2
gravity_scale = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="DeathTween" type="Tween" parent="."]
playback_speed = 0.3
playback/speed = 0.3

[connection signal="body_entered" from="." to="." method="_on_Mob_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="DeathTween" to="." method="_on_DeathTween_tween_all_completed"]
